--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         }
     },
     "require": {
-        "php": "^7.0",
+        "php": "^8.0",
         "ext-dom": "*",
-        "typo3/cms-core": "^7.6|^8.7|^9.3|^10.0"
+        "typo3/cms-core": "^7.6|^8.7|^9.3|^10.0|^11"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
