--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^8.0",
         "ext-dom": "*",
-        "typo3/cms-core": "^7.6|^8.7|^9.3|^10.0|^11"
+        "typo3/cms-core": "^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
@@ -31,6 +31,7 @@
     "replace": {
         "typo3-ter/mediaoembed": "self.version"
     },
+    "version": "dev-master",
     "config": {
         "vendor-dir": ".Build/vendor",
         "bin-dir": ".Build/bin"
@@ -46,8 +47,8 @@
             "dev-develop": "2.1.x-dev"
         },
         "typo3/cms": {
-            "cms-package-dir": "{$vendor-dir}/typo3/cms",
-            "web-dir": ".Build/Web"
+            "web-dir": ".Build/Web",
+            "extension-key": "typo3-extension-mediaoembed"
         }
     }
 }
